--- a/css.css
+++ b/css.css
@@ -25,11 +25,11 @@ body {
 body::after,
 body::before {
   top: 0;
-  position: absolute;
+  position: fixed;
   display: block;
   content: '';
   width: 8%;
-  height: 2000%;
+  height: 1600%;
   background-color: #131514;
   z-index: 10;
   font-size: var(--font-size_text);
@@ -56,7 +56,7 @@ section {
 .container-center {
   margin: 0 auto;
   width: 84%;
-  padding: 0 200px;
+  padding: 0 8%;
 }
 .container-full {
   display: flex;
@@ -87,8 +87,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: auto;
-  max-width: 1400px;
   padding: 20px;
   font-weight: bold;
 
@@ -101,15 +99,34 @@ header {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
-  border: 4px solid #ffffff;
+  border-left: 2px solid #ffffff;
   border-radius: 50%;
+  border-right: 6px solid transparent;
+
 
   cursor: pointer;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 .header__item:hover {
   scale: 1.25;
-  border: 6px solid #ffffff;
+  border-right: 6px solid orange;
+  border-left: 6px solid orange;
+}
+.header__item.first{
+  height: 150px;
+  width: 150px;
+}
+.header__item.second{
+  height: 150px;
+  width: 150px;
+}
+.header__item.third{
+  height: 150px;
+  width: 150px;
+}
+.header__item.fourth{
+  height: 150px;
+  width: 150px;
 }
 
 ul.header__items {
@@ -271,6 +288,7 @@ ul.header__items-bottom {
 
 .block-points__inner img {
   max-width: 50%;
+  max-height: 380px;
   padding: 24px;
 }
 
@@ -315,6 +333,7 @@ ul.header__items-bottom {
 }
 
 .block-points-pictures__inner img {
+  max-width: 30%;
   max-height: 300px;
   padding: 20px;
 }
@@ -385,4 +404,10 @@ ul.header__items-bottom {
 .requisites__item-img{
   width: 28px;
   margin-right: 5px;
+}
+
+.header__item__arrow{
+  margin-top: 200px;
+  transform: rotate(90deg);
+  width: 80px;
 }
